fix overflow

--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -23,7 +23,8 @@
 
 .main {
   min-height: 100vh;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
   padding: 2rem;
   padding-bottom: 4rem;
 }
